change font on fixed header controls to prevent wrapping

--- a/less/app.less
+++ b/less/app.less
@@ -633,12 +633,12 @@ h1,h2,h3,h4,h5,h6 {
 	}
 
 	.fixed-header-controls a {
-		font-size: @font-size-base * 0.875;
+		font-size: @font-size-base * 0.833333333;
 		color: @music-hp-link-color;
 		-webkit-font-smoothing: antialiased;
-		// font-family: @font-family-condensed;
-		text-transform: lowercase;
-		// letter-spacing: 1px;
+		font-family: @font-family-condensed;
+		text-transform: uppercase;
+		// letter-spacing: 0.1rem;
 		cursor: pointer;
 
 		&:hover {
